[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tiles/tile_0120.png" type="Texture" id=1]
[ext_resource path="res://EnemySoldier.gd" type="Script" id=2]
[ext_resource path="res://Tiles/tile_0130.png" type="Texture" id=3]
[ext_resource path="res://Tiles/tile_0126.png" type="Texture" id=4]
[ext_resource path="res://Tiles/tile_0115.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="EnemySoldier" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, 14 )
rotation = -3.14159
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
frame = 1
speed_scale = 5.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
